--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MI CRUD</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./App.css">
 
 </head>
 <body>
     
-    <h1 id="texto"></h1>
+    
     <script src="App.js"></script>
 </body>
 </html>
